--- a/app.json
+++ b/app.json
@@ -114,7 +114,7 @@
       "manager",
       "bot"
    ],
-   "logo": "https://telegra.ph/ruined-01-13",
+   "logo": "https://telegra.ph/file/5447948a779825eb3f80a.jpg",
    "name": "GROUP SCOUT",
    "repository": "https://github.com/ruined-soul/GROUPSCOUT_BOT"
 }
