--- a/app.json
+++ b/app.json
@@ -46,7 +46,7 @@
       },
 "GRAND_IMG": {
          "description": "Image shows when hit /start",
-         "value": "https://telegra.ph/ruined-01-13"    
+         "value": "https://telegra.ph/file/5447948a779825eb3f80a.jpg"    
       },
       "GBAN_LOGS": {
          "description": "Gban log channel, include the hyphen too: ex: -1001169266538",
