--- a/app.json
+++ b/app.json
@@ -1,87 +1,120 @@
 {
-  "name": "Groupscput_bot",
-  "description": "Telegram group management bot", 
-  "logo": "",
- "keywords": [
-  "telegram",
-  "Scout",
-  "Assistant",
-  "modular",
-  "productivity"
- ],
- "repository": "https://github.com/ruined-soul/Groupscout_bot",
- "success_url": "https://github.com/ruined-soul",
- "env": {
-  "API_KEY": {
-    "description": "Your Api Key..",
-    "required": true,
-    "value": ""
-  },
-  "ALLOW_EXCL": {
-    "description": "Don't Touch only use TRUE/FALSE",
-    "required": true,
-    "value": "FALSE"
-  },
-  "OWNER_ID": {
-    "description": "Your Owner id in integers",
-    "required": true ,
-    "value": ""
-  },
-  "OWNER_USERNAME": {
-    "description": "Your Owner username",
-    "required": true,
-    "value": ""
-  },
-  "SQLALCHEMY_DATABASE_URI": {
-    "description": "Database Uri Don't touch if you don't know",
-    "required": true,
-    "value": "sqldbtype://username:pw@hostname:port/db_name"
-  },
-  "MESSAGE_DUMP": {
-    "description": "Add Support Group id must start with -100",
-    "required": false,
-    "value": ""
-  },
-  "NO_LOAD": {
-    "description": "moduels which u Don't want to load",
-    "required": false,
-    "value": "rss"
-  },
-  "SUDO_USERS": {
-    "description": "List of SSudos",
-    "required": false,
-    "value": ""
-  },
-  "SUPPORT_USERS": {
-    "description": "Support users",
-    "required": false,
-    "value": ""
-  },
-  "WHITELIST_USERS": {
-    "description": "WHITELIST_USERS id",
-    "required": false,
-    "value": ""
-  },
-  "BAN_STICKER": {
-    "description": "Banned Sticker pack",
-    "required": false,
-    "value": "CAADAgADOwADPPEcAXkko5EB3YGYAg"
-  },
-  "API_ID": {
-   "description": "Get this value from my.telegram.org! Please do not steal",
-   "required": true,
-   "value": ""
-  },
-  "API_HASH": {
-  "description": "Get from api hash",
-  "required": true,
-  "value": ""
-  }
- },
- "addons": [{
-  "plan": "heroku-postgresql",
-  "options": {
-   "version": "12"
-  }
- }]
+   "addons": [
+      {
+         "options": {
+            "version": "12"
+         },
+         "plan": "heroku-postgresql"
+      }
+   ],
+   "description": "Telegram group management bot.",
+   "env": {
+      "ALLOW_EXCL": {
+         "description": "Set this to True if you want ! to be a command prefix along with /",
+         "value": "True"
+      },
+      "BAN_STICKER": {
+         "description": "ID of the sticker you want to use when banning people.",
+         "required": false,
+         "value": ""
+      },
+      "DEL_CMDS": {
+         "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
+         "value": "True" 
+      },
+      "ENV": {
+         "description": "Setting this to ANYTHING will enable environment variables.",
+         "value": "ANYTHING"
+      },
+      "SQLALCHEMY_DATABASE_URI": {
+         "description": "Your postgres sql db, empty this field if you dont have one.",
+         "required": false,
+         "value": "sqldbtype://username:pw@hostname:port/db_name"
+      },      
+      "OWNER_ID": {
+         "description": "Your user ID as an integer.",
+         "value": "1159381624"
+      },
+      "OWNER_NAME": {
+         "description": "Your username",
+         "value": "Ruined_Soul"
+      },
+      "DEV_USERS": {
+         "description": "ID of users who are Dev (can use /py etc.)",
+         "required": false,
+         "value": "1159381624"
+      },
+"GRAND_IMG": {
+         "description": "Image shows when hit /start",
+         "value": "https://telegra.ph/file/2771b61543bf0269de8d8.jpg"    
+      },
+      "GBAN_LOGS": {
+         "description": "Gban log channel, include the hyphen too: ex: -123456",
+         "value": "-123"
+      },
+      "CASH_API_KEY": {
+         "description": "Required for currency converter",
+         "value": "-xyz"
+      },
+      "TIME_API_KEY": {
+         "description": "Required for timezone information",
+         "value": "HW6LQCYX43HS"
+      },
+      "AI_API_KEY": {
+         "description": "for activate chatbot",
+         "value": "x_y_z"
+      },
+      "API_OPENWEATHER": {
+         "description": "Required for weather information",
+         "value": "5c5adc2bc1832de6943e3f4467e84c39"
+      },
+      "PORT": {
+         "description": "Port to use for your webhooks.",
+         "required": false,
+         "value": ""
+      },
+      "STRICT_GBAN": {
+         "description": "Enforce gbans across new groups as well as old groups. When a gbanned user talks, he will be banned.",
+         "value": "True"
+      },
+      "SUDO_USERS": {
+         "description": "A space separated list of user IDs who you want to assign as sudo users.",
+         "required": false,
+         "value": "1159381624"
+      },
+      "TIGER_USERS": {
+         "description": "A space separated list of user IDs who you wanna assign as tiger users.",
+         "required": false,
+         "value": "1159381624"
+      },
+      "TOKEN": {
+         "description": "Your bot token.",
+         "required": true,
+         "value": ""
+      },
+      "URL": {
+         "description": "The Heroku App URL :-  https://<appname>.herokuapp.com/",
+         "required": false,
+         "value": ""
+      },
+      "WEBHOOK": {
+         "description": "Setting this to ANYTHING will enable webhooks.",
+         "required": false,
+         "value": ""
+      },
+      "WHITELIST_USERS": {
+         "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
+         "required": false,
+         "value": "1159381624"
+      }
+   },
+   "keywords": [
+      "telegram",
+      "group",
+      "manager",
+      "bot"
+   ],
+   "logo": "https://telegra.ph/file/2771b61543bf0269de8d8.jpg",
+   "name": "GROUP SCOUT OFFICIAL",
+   "repository": "https://github.com/ruined-soul/GROUPSCOUT_BOT"
 }
